fixed footer alignment

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,7 +12,7 @@
   .link-top {
     margin: 0 auto;
     margin-top: 5%;
-    max-width: 10%;
+    max-width: 67px;
     height: auto;
     cursor: pointer;
     border-radius: 50%;
@@ -29,6 +29,7 @@
   .sign-off {
     font-size: 2rem;
     width: 30%;
+    min-width: 300px;
     margin: 5% auto;
   }
 
@@ -37,6 +38,10 @@
     justify-content: space-between;
     margin: 0 auto 2rem auto;
     min-width: 25%;
+
+    @media only screen and (max-width: $breakpoint-tablet) {
+      min-width: 300px;
+    }
 
     i {
       border-radius: 0.3rem;
